# stoplossdegen-api-design-

./: .env.example  .gitignore  Cargo.toml  Dockerfile  PRODUCTION.md  README.md  docker-compose.yml  run_api.sh  run_demo.sh  start.sh  test_stop_loss.sh
src/: api.rs  handlers.rs  lib.rs  main.rs  main_simple.rs  models.rs  orders.rs  price.rs  swap.rs  test_stop_loss.rs  utils.rs  wallet.rs
static/: app.js  index.html  style.css
