[package]
name = "solana_wallet_api"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A lightweight Rust API server to manage Solana wallets, token trades, and portfolio tracking."
default-run = "solana_wallet_server"

[dependencies]
# Web framework
axum = "0.6.20"
tower-http = { version = "0.4.0", features = ["cors", "fs"] }
tokio = { version = "1.33.0", features = ["full"] }
hyper = "0.14.27"

# Solana
solana-sdk = "1.16.17"
solana-client = "1.16.17"
solana-transaction-status = "1.16.17"
solana-program = "1.16.17"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"

# Wallet generation
bip39 = "2.0.0"
rand = "0.8.5"
ed25519-dalek = "1.0.1"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.7"

# Serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
bincode = "1.3.3"

# HTTP client
reqwest = { version = "0.11.20", features = ["json"] }

# Utilities
dotenv = "0.15.0"
anyhow = "1.0.75"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
bs58 = "0.5.0"
base64 = "0.21.4"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }

[lib]
name = "solana_wallet_api"
path = "src/lib.rs"

[[bin]]
name = "solana_wallet_server"
path = "src/main.rs"

[profile.release]
opt-level = 3 